--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,16 +5,20 @@ plugins {
 
 android {
     namespace 'com.example.sawithub'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.sawithub"
         minSdk 22
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    viewBinding {
+        enabled = true
     }
 
     buildTypes {
