Build scan activity and result activity
update gradle for dolphin (min sdk from 22 to 26), update manifest (premission for camera), build scan activity with camera X and layout, build result activity and layout, fix margin bottom on home, dashboard, and profile page, add drawable for camera.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,10 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <uses-feature android:name="android.hardware.camera" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -15,6 +19,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Sawithub"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.scan.ResultActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+
+        <activity
+            android:name=".ui.scan.ScanActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".ui.home.HomeActivity"
             android:exported="false"
