--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Sawithub"
         tools:targetApi="31">
+
+        <activity
+        android:name=".ui.profile.EditProfileActivity"
+        android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".ui.scan.ResultActivity"
             android:exported="false">
