--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,21 +13,16 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher_sawithub"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_sawithub_round"
         android:supportsRtl="true"
+        android:largeHeap="true"
         android:theme="@style/Theme.Sawithub"
         tools:targetApi="31">
         <activity
-            android:name=".RoomChatActivity"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".ui.hasilScan.HasilScanActivity"
+            android:name=".ui.roomchat.RoomChatActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
